context for database first

--- a/CompanyStructure/appsettings.json
+++ b/CompanyStructure/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CompanyDbConnection": "Server=localhost;Database=CompanyDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
