--- a/CompanyStructure/appsettings.json
+++ b/CompanyStructure/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "CompanyDbConnection": "Server=localhost;Database=CompanyDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtSettings": {
+    "Issuer": "CompanyStructureAPI",
+    "Audience": "CompanyStructureAPIClient",
+    "DuratioInMinutes": 10,
+    "Key": "SecretKeyForAPI123"
   }
 }
